force-app/main/default/objects/Attendance_Session__c/Attendance_Session__c.object-meta.xml
<CustomObject>
    <description>Represents a single attendance session for a class and subject on a date</description>
    <label>Attendance Session</label>
    <nameField>
        <displayFormat>AS-{000}</displayFormat>
        <label>Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>