force-app/main/default/objects/Attendance_Session__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Class for which attendance is taken</description>
    <inlineHelpText>Select the class for which attendance is being recorded.</inlineHelpText>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Attendance Sessions</relationshipLabel>
    <relationshipName>Attendance_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>