force-app/main/default/objects/Attendance_Session__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date on which attendance is taken</description>
    <inlineHelpText>Select the date for which attendance is being recorded.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>