force-app/main/default/objects/Attendance_Session__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>subject of the teacher</description>
    <inlineHelpText>select subject under above teacher.</inlineHelpText>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Attendance Sessions</relationshipLabel>
    <relationshipName>Attendance_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>