force-app/main/default/objects/Attendance_Session__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Teacher who is taking attendance</description>
    <inlineHelpText>Select the teacher who is taking attendance for this session.</inlineHelpText>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Attendance Sessions</relationshipLabel>
    <relationshipName>Attendance_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>